--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,26 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+* {
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
+html, body {
+    height: 100%;
+}
+
+.container {
+    display: flex;
+
+}
+
+header {
+    background-color: #777777;
+}
+
+footer {
+    background-color: #777777;
+}
